# kluris

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.specs/: registry.md
.specs/kluris-search-and-batch-git/: SPEC.md  interview-01.md  research-01.md
.specs/yaml-neurons/: SPEC.md  research-01.md
packaging/: Dockerfile.template  env.example.template
src/kluris/: __init__.py  cli.py
src/kluris_runtime/: __init__.py  deprecation.py  frontmatter.py  neuron_excerpt.py  neuron_index.py  search.py  search_fts.py  snapshot.py  wake_up.py
tests/: conftest.py  fixtures_yaml_neurons.py  test_agents.py  test_brain.py  test_brain_resolution.py  test_cli_extras.py  test_clone.py  test_companion_cli.py  test_companions.py  test_config.py  test_create.py  test_doctor.py  test_dream.py  test_e2e.py  test_frontmatter.py  test_git.py  test_help.py  test_install.py  test_json_output.py  test_linker.py  test_list.py  test_lobe.py  test_maps.py  test_mri.py  test_mri_cmd.py  test_neuron.py  test_neuron_excerpt.py  test_neuron_templates.py  test_open_in_browser.py  test_pull.py  test_push.py  test_recall.py  test_register.py  test_remove.py  test_runtime_delegation.py  test_runtime_isolation.py  test_search.py  test_snapshot.py  test_status.py  test_wake_up.py  (+3 more)
tests/pack/: conftest.py  test_agent_loop.py  test_cli_pack.py  test_config.py  test_e2e_docker.py  test_history.py  test_large_brain_e2e.py  test_litellm_contract.py  test_litellm_provider.py  test_middleware.py  test_pack_stager.py  test_providers_apikey.py  (+9 more)
(+51 files in other folders)
