[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kluris"
version = "2.28.4"
description = "Turn your AI agents into team subject matter experts with shared, human-curated knowledge"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "pydantic>=2.0",
    "pathspec>=0.12",
]

[project.scripts]
kluris = "kluris.cli:cli"

[project.urls]
Homepage = "https://kluris.io"
Repository = "https://github.com/ngvoicu/kluris"
Issues = "https://github.com/ngvoicu/kluris/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    # Pack server deps — needed for tests in tests/pack/, NOT CLI runtime deps.
    # Floors kept in lockstep with the exact pins in packaging/Dockerfile.template
    # so the suite validates the same versions the image ships.
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48",
    "jinja2>=3.1.6",
    "sse-starlette>=3.4.4",
    "httpx>=0.28.1",
    "respx>=0.21",
    "pytest-asyncio>=0.23",
    "litellm>=1.87",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kluris", "src/kluris_runtime"]
include = ["packaging/*"]

[tool.pytest.ini_options]
markers = [
    "docker_network: opt-in Docker e2e tests; need a Docker daemon",
]
